--- a/style.css
+++ b/style.css
@@ -6,13 +6,17 @@
     box-sizing: border-box;
 }
 
+body {
+    color: #111;
+}
+
 .container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    min-height: 100vh;
+    min-height: 80vh;
+    margin: 30px 10px 10px 10px;
 }
 
 img {
@@ -20,10 +24,10 @@ img {
     object-fit: cover;
 }
 input {
-    width: 100%;
     margin-bottom: 5px;
     padding: 10px 0;
     border: 1px solid rgb(203, 202, 202);
+    border-radius: 5px;
 }
 
 input::placeholder {
@@ -33,7 +37,7 @@ input::placeholder {
 }
 
 input:focus{
-    border: 1px solid black;
+    border: 1px solid #111;
     outline: none;
 }
 div {
@@ -41,86 +45,119 @@ div {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 10px;
 }
 
 button {
-    width: 100%;
-    background-color: #808dfb ;
+    background-color: #606ff4 ;
     padding: 5px;
-    border-radius: 8px;
+    border-radius: 5px;
     border: none;
     margin-top: 8px;
 }
 
-button a{
-    color: white;
+a{
     text-decoration: none;
 }
 
-.card {
-    border: 1px solid rgb(196, 195, 195);
-    width: 100%;
-    height: 100%;
-    max-width: 320px;
-    padding: 40px 40px 0 40px;
-    gap: 10px;
+button a{
+    color: #fff;
 }
 
-.secondnd_card { border:  1px solid rgb(196, 195, 195);
+div, button, img,input {
     width: 100%;
+}
+
+
+.card {
+    border: 1px solid rgb(196, 195, 195);
     max-width: 320px;
+    padding: 50px 40px 0 40px;
+    border-radius: 5px;
 }
 
 .titel img {
     width: 200px;
 }
 
-.fb_login div {
+.loginform input:focus{
+    border-color: #a8a8a8;
+    padding-left: 5px;
+}
+
+.login-with-fb div {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 6px;
 }
 
 .loginwithfb {
     padding-top: 15px;
 }
-.fb_login div a {
-    text-decoration: none;
-}
 
-.fb_login img {
-    width: 100%;
-    max-width: 20px;
+.loginwithfb img {
+    max-width: 17px;
 }
 
 .forgotpass {
-    padding: 15px 0 20px 0;
+    padding-bottom:20px;
 }
+
 .forgotpass a {
     color: black;
 }
+
 .forgotpass a:hover {
-    color: black;
     text-decoration: underline;
 }
 
-.secondnd_card {
+.signup_section { 
+    border:  1px solid rgb(196, 195, 195);
+    max-width: 320px;
     padding: 15px 0;
-}
-
-.sign_up {
     display: flex;
     flex-direction: row;
-    gap: 5px
-}
-
-.sign_up a {
-    text-decoration: none;
+    gap: 5px;
+    border-radius: 5px;
 }
 
 form button {
     cursor: default;
 }
-.loginform input:focus{
-    border-color: #a8a8a8;
+
+@media (max-width: 335px){
+    .card {
+        border: 1px solid rgb(196, 195, 195);
+        width: 230px;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    body {
+    background-color: #fff;
+    font-size: 12px;
+ }
+    .login-with-fb div {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+    input::placeholder {
+    color: gray;
+    font-size:8px;
+    padding-left: 10px;
+}
+
+    .signup_section { 
+    border:  1px solid rgb(196, 195, 195);
+    width: 230px;
+    padding: 15px 0;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    border-radius: 5px;
+}
+
 }
